--- a/SCSS/Layout/_banner.scss
+++ b/SCSS/Layout/_banner.scss
@@ -15,14 +15,6 @@
 
 }
 
-// .container-banner .slick-dots li[class*=slick-active] {
-
-//     button {
-//         border-color: #ff0000;
-//         color: #ff0000;
-//     }
-// }
-
 .container-banner {
 
     width: 100%;
@@ -42,7 +34,7 @@
         height:20px;
         border-radius: 10px;
         cursor: pointer;
-        left: calc((50vw - 6rem));
+        left: calc((50vw - 7.25rem));
 
     }
 
@@ -58,7 +50,7 @@
         height:20px;
         border-radius: 10px;
         cursor: pointer;
-        left: calc((50vw - 4rem));
+        left: calc((50vw - 5.25rem));
 
     }
 
@@ -74,7 +66,7 @@
         height:20px;
         border-radius: 10px;
         cursor: pointer;
-        left: calc((50vw - 2rem));
+        left: calc((50vw - 3.25rem));
 
     }
 
@@ -90,7 +82,7 @@
         height:20px;
         border-radius: 10px;
         cursor: pointer;
-        left: 50vw;
+        left: calc((50vw - 1.25rem));
 
     }
 
@@ -106,7 +98,7 @@
         height:20px;
         border-radius: 10px;
         cursor: pointer;
-        left: calc((50vw + 2rem));
+        left: calc((50vw + 0.75rem));
 
     }
 
@@ -122,7 +114,7 @@
         height:20px;
         border-radius: 10px;
         cursor: pointer;
-        left: calc((50vw + 4rem));
+        left: calc((50vw + 2.75rem));
 
     }
 
@@ -138,7 +130,7 @@
         height:20px;
         border-radius: 10px;
         cursor: pointer;
-        left: calc((50vw + 6rem));
+        left: calc((50vw + 4.75rem));
 
     }
 
@@ -198,7 +190,7 @@
 
             @media (max-width: 991.999px) {
                 width: 75%;
-                left: calc(100vw * 0.125);
+                left: calc(100vw * 0.12);
             }
 
             // @media (min-width: 768px) {
@@ -207,7 +199,6 @@
 
 
             > div {
-                z-index: 150;
                 position: relative;
                 width: 100%;
                 top: 30px;
